# perplexity-cli

./: perplexity.py  pyproject.toml
