[project]
name = "perplexity-cli"
version = "0.1.0"
description = "A simple CLI client for the Perplexity API"
authors = [
    { name = "Dawid Szewc" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests",
]

[project.scripts]
perplexity = "perplexity:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["perplexity.py"]

[dependency-groups]
dev = []
